# SwiftIR

./: .gitignore  GPU_LOWERING_ROADMAP.md  LICENSE  Package.swift  README.md  ROADMAP.md  SwiftIR_TensorBoard_Profiling_Guide.md
.github/workflows/: build-release.yml  ci.yml  macos-build-dependencies.yml  pr-validation.yml  release.yml  ubuntu-build-dependencies.yml
Benchmarks/: BufferPoolBenchmark.swift  JAXComparison.swift  PipelinedBenchmark.swift
Benchmarks/QuantFinance/: README.md
Examples/: BENCHMARK_RESULTS.md  BUILDING_SIMULATION_COMPARISON.md  BuildingSimulation_Simple.swift  BuildingSimulation_StandardSwift.swift  BuildingSimulation_SwiftIR.swift  CNN.swift  JupyterBuildingSimulationFull.swift  JupyterBuildingSimulationTest.swift  JupyterComprehensiveTest.swift  JupyterFeatureParityTest.swift  JupyterHighLevelTest.swift  JupyterProfiledSimulation.swift  JupyterShardedAutoDiffExample.swift  JupyterShardingBenchmark.swift  JupyterShardingExample.swift  JupyterTest.swift  LLVM_VectorAdd_Example.swift  Macro_Example.swift  PJRT_Add_Example.swift  PJRT_Approaches1and2_Test.swift  PJRT_Example.swift  PJRT_MatMul_Example.swift  PJRT_MultiPath_Example.swift  PJRT_NeuralNet_Example.swift  PJRT_PowerfulDSL_Example.swift  PJRT_SequentialDSL_Example.swift  PJRT_SimpleString_Example.swift  PJRT_ThreeExecutables_Test.swift  PJRT_TwoApproaches_Test.swift  ProfilerDemo.swift  ProfilerTest.swift  README.md  RuntimeInfo.swift  SPIRV_Example.swift  SPIRV_ManualCast_Test.swift  SPIRV_VectorAdd_Example.swift  ShardedAutoDiffExample.swift  ShardedExecutionExample.swift  ShardedTracingExample.swift  ShardingBenchmark.swift  (+5 more)
Jax/: 00-OVERVIEW.md  01-VMAP-SPEC.md  02-SCAN-SPEC.md  03-COND-SPEC.md  04-SHAPE-TYPED-TENSORS-SPEC.md  05-CHECKPOINTING-SPEC.md  06-PRNG-SPEC.md  07-HIGHER-ORDER-AD-SPEC.md  08-PYTREES-SPEC.md
Sources/: README.md
Sources/JupyterCWrappers/: CMakeLists.txt  JupyterMLIRWrapper.c
Sources/JupyterCWrappers/include/: JupyterMLIRWrapper.h
Sources/PJRTCWrappers/: BUILD.bazel  CMakeLists.txt  PJRTProtoHelper.cpp  PJRTSimpleWrapper.c  README.md  test_proto_encode  test_proto_encode.cpp
Sources/PJRTCWrappers/include/: PJRTProtoHelper.h  PJRTSimpleWrapper.h  module.modulemap
Sources/PJRTDirectCxx/: CMakeLists.txt  PJRTDirect.cpp  PJRTDirect.pc.in
Sources/PJRTDirectCxx/include/: PJRTDirect.h  module.modulemap
Sources/ProfilerCWrappers/: CMakeLists.txt  XLAProfilerWrapper.cpp
Sources/ProfilerCWrappers/include/: XLAProfilerWrapper.h
Sources/SwiftIR/: README.md  S4MLIR.swift
Sources/SwiftIRBuilders/: ControlFlowDSL.swift  HighLevelDSL.swift  README.md  ResultBuilders.swift
Sources/SwiftIRCore/: MLIRCore.swift  MLIRCoreWrappers.c  README.md
Sources/SwiftIRDialects/: ArithDialect.swift  FuncDialect.swift  README.md
Sources/SwiftIRGPU/: README.md
Sources/SwiftIRJupyter/: JupyterCompiler.swift  JupyterCond.swift  JupyterDerivatives.swift  JupyterDistributed.swift  JupyterPRNG.swift  JupyterScan.swift  JupyterShardedAutoDiff.swift  JupyterSharding.swift  JupyterSymbolicAD.swift  JupyterTree.swift  JupyterVmap.swift  JupyterWhileLoop.swift  LibraryLoader.swift  MLIRBindings.swift  PJRTBindings.swift  ShardedExecution.swift  SwiftIRJupyter.swift
Sources/SwiftIRMacros/: MLIRFunctionMacro.swift  README.md
Sources/SwiftIRProfiler/: PJRTProfiler.swift  Profiler.swift  ProfilerBindings.swift  ProfilerBindingsDynamic.swift
Sources/SwiftIRRuntime/: AcceleratorType.swift  Errors.swift  PJRTClientUnified.swift  PJRTPlugin.swift  RuntimeDetector.swift
Sources/SwiftIRSharding/: DeviceMesh.swift  SdyCAPIWrapper.c  SdyDialect.swift  SdyOptRunner.swift  ShardingPipeline.swift  StableHLOSharding.swift  TensorSharding.swift
Sources/SwiftIRShardingLite/: DeviceMesh.swift  SdyOptRunner.swift  ShardingPipeline.swift  StableHLOSharding.swift  TensorSharding.swift
Sources/SwiftIRStableHLO/: README.md  StableHLODSL.swift  StablehloDialect.swift  StablehloOps.swift
Sources/SwiftIRTypes/: MLIRType.swift  README.md  TypeValidation.swift
Sources/SwiftIRXLA/: MLOps.swift  README.md  StableHLOMLOps.swift  SwiftIRXLA.swift  TensorDialect.swift  TensorOps.swift  ValueExtensions.swift
Tests/SwiftIRJupyterTests/: JupyterShardedAutoDiffTests.swift
Tests/SwiftIRRuntimeTests/: AcceleratorTypeTests.swift  PJRTClientFactoryTests.swift  RuntimeDetectorTests.swift  SwiftIRErrorTests.swift
Tests/SwiftIRShardingTests/: PureSwiftTests.swift  ShardingTests.swift
Tests/SwiftIRTests/: ExecutionTests.swift  MLOpsTests.swift  Phase10ValidationTests.swift  Phase11ValidationTests.swift  Phase12ValidationTests.swift  Phase13ValidationTests.swift  Phase14ValidationTests.swift  Phase14aRealExecutionTests.swift  Phase14bEndToEndTests.swift  Phase15ValidationTests.swift  Phase16GradientExecutionTests.swift  Phase18TranscendentalPJRTTests.swift  Phase19MultiDimensionalTests.swift  Phase20FixedOperationsTests.swift  Phase21MatmulPJRTTests.swift  Phase22ReLUPJRTTests.swift  Phase23MultiInputTests.swift  Phase24BroadcastingTests.swift  Phase25GradientReductionTests.swift  Phase26TrigonometricTests.swift  Phase27ReductionTests.swift  Phase28ShapeOpsTests.swift  Phase29ConvolutionTests.swift  Phase30ElementWiseTests.swift  Phase31SoftmaxTests.swift  Phase32ActivationTests.swift  Phase33PoolingTests.swift  Phase34NormalizationTests.swift  Phase35ShapeOpsTests.swift  Phase36DropoutTests.swift  Phase37GatherScatterTests.swift  Phase38LossFunctionTests.swift  Phase9ValidationTests.swift  SDYShardingTests.swift  ShardedAutoDiffTests.swift  StablehloBasicTest.swift  StablehloIntegrationTest.swift  (+4 more)
cmake/: CMakeLists.txt  SwiftIRMLIR.cpp  build.sh
docs/: JUPYTER_COLAB_INTEGRATION.md  PERFORMANCE_GAP_ANALYSIS.md  PHASE_11_SUMMARY.md  PJRT_INTEGRATION.md  SHARDY_GUIDE.md  SPIRV_INTEGRATION.md  SPIRV_TODO.md  TensorBoard_Profiling_Status.md  XLA_BUILD_TROUBLESHOOTING.md
mlir_dumps/: black_scholes_fwd_grad_stablehlo.txt
scripts/: README.md  check-prerequisites.sh  install-swiftir-ubuntu.sh  verify-installation.sh
tpu_docs_dev/: CLAUDE.md  build-release.yml  swiftir-runtime-detection-spec.json
(+99 files in other folders)
